--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/3. 裸机上运行的 Hello OS Kernel.md
@@ -281,7 +281,7 @@ typedef          char  int8_t;
 4 directories, 6 files
 ```
 
-
+# 编译并运行内核
 
 我们直接执行 make 命令编译代码，没有意外的话会生成一个叫做hx\_kernel的文件，并且自动挂载软盘镜像把这个文件复制进去。
 
@@ -290,68 +290,50 @@ typedef          char  int8_t;
 最后我们来运行它，使用下面的命令即可运行:
 
 ```
-	make qemu
+make qemu
 ```
 
 很简单吧，这样我们的内核就在qemu虚拟机里执行了。首先显示的是GRUB菜单，但是我们的内核载入之后就在也没有动静了，因为我们什么代码也没有写。
 
 有点失望是不是？别急，下一章过后，我们就可以自如的在屏幕上显示字符了。有点迫不及待了？那我就先透露一点吧，按照如下代码修改kern\_entry函数:
 
-```
-    #include "types.h"
+```cpp
+#include "types.h"
 
-    int kern_entry()
-    {
-        uint8_t *input = (uint8_t *)0xB8000;
-        uint8_t color = (0 << 4) | (15 & 0x0F);
+int kern_entry()
+{
+    uint8_t *input = (uint8_t *)0xB8000;
+    uint8_t color = (0 << 4) | (15 & 0x0F);
 
-        *input++ = 'H'; *input++ = color;
-        *input++ = 'e'; *input++ = color;
-        *input++ = 'l'; *input++ = color;
-        *input++ = 'l'; *input++ = color;
-        *input++ = 'o'; *input++ = color;
-        *input++ = ','; *input++ = color;
-        *input++ = ' '; *input++ = color;
-        *input++ = 'O'; *input++ = color;
-        *input++ = 'S'; *input++ = color;
-        *input++ = ' '; *input++ = color;
-        *input++ = 'K'; *input++ = color;
-        *input++ = 'e'; *input++ = color;
-        *input++ = 'r'; *input++ = color;
-        *input++ = 'n'; *input++ = color;
-        *input++ = 'e'; *input++ = color;
-        *input++ = 'l'; *input++ = color;
-        *input++ = '!'; *input++ = color;
+    *input++ = 'H'; *input++ = color;
+    *input++ = 'e'; *input++ = color;
+    *input++ = 'l'; *input++ = color;
+    *input++ = 'l'; *input++ = color;
+    *input++ = 'o'; *input++ = color;
+    *input++ = ','; *input++ = color;
+    *input++ = ' '; *input++ = color;
+    *input++ = 'O'; *input++ = color;
+    *input++ = 'S'; *input++ = color;
+    *input++ = ' '; *input++ = color;
+    *input++ = 'K'; *input++ = color;
+    *input++ = 'e'; *input++ = color;
+    *input++ = 'r'; *input++ = color;
+    *input++ = 'n'; *input++ = color;
+    *input++ = 'e'; *input++ = color;
+    *input++ = 'l'; *input++ = color;
+    *input++ = '!'; *input++ = color;
 
-        return 0;
-    }
+    return 0;
+}
 ```
 
 现在我们编译并且启动虚拟机，就能看到了第一阶段的成果，屏幕上华丽丽的输出了“Hello,
 OS World!”的字样。
 
-![虚拟机里运行的 Hello, OS World!](https://raw.githubusercontent.com/hurley25/wiki/gh-pages/_posts/picture/chapt3/hello_os_world.png)
+![2020-02-08-23-48-19.png](./images/2020-02-08-23-48-19.png)
 
 至于代码是什么意思大家先不用纠结，下一章将详细探究。
 
 辛苦了这么久，终于看到一点点成功了。有没有一点小兴奋呢？下一章我们将完全的实现对屏幕的字符输出控制，并且有机会的话我将把这个小内核运行在物理机上，和大家一起体验一下物理机运行的感觉。
 
 真正的好戏从下一章开始，别走开哦。
-
-
-
-[^11]: 本着够用就好的原则，较早的GRUB版本就完全满足我们的需求了，而新版的GRUB配置起来比较麻烦。
-
-[^12]: 其实也没有什么需要改的，主要是GRUB载入的内核文件名。我的内核名叫做hx\_kernel，如果你嫌麻烦，和我叫一个名字就不用修改GRUB配置了。
-
-[^13]: 入口可以自由定义，只要在ld链接脚本里修改就可以。要知道我们现在是在写一个操作系统内核，在这里我们几乎可以定制一切。
-
-[^14]: 后面谈到分页后你就明白这里的4KB对齐之类的含义了，暂时先按照我的要求做吧。
-
-[^15]: 如果你对这里不是很清楚的话,暂时就先跳过去,到后面解释完函数调用栈之后再回来看。如果你现在非要现在弄明白的话,Google是最好的老师。
-
-[^16]: 大家有兴趣的话可以尝试自己先实现关机操作，若是对代码有的地方不理解可以参考NASM的手册。
-
-[^17]: 现在看不懂没关系，我们讲到后面会再次回来分析这些状态信息。
-
-[^18]: 如果在挂载这一步出错，请在自己系统的/mnt目录下建立一个叫做kernel的目录，当然你也可以修改Makefile文件。
