--- a/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
+++ b/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
@@ -33,8 +33,20 @@ nasm boot.asm -o boot
 在Linux下可以这样做
 
 ```
-dd if=boot of=/dev/fd0 bs=512 count=1 conv=notrunc
+# 创建软盘映像
+# dd if=/dev/zero of=floppy.img bs=512 count=2880
+
+# 将内容放到第一个扇区
+# dd if=boot of=floppy.img bs=512 count=1 conv=notrunc
+
+# 启动虚拟机
+# qemu -fda floppy.img
+
+# 当然也可直接从boot启动
+# qemu -fda boot
 ```
+
+![2020-02-08-18-18-09.png](./images/2020-02-08-18-18-09.png)
 
 在Windows下可以这样做(7)：
 
@@ -43,16 +55,3 @@ rawrite2.exe -f boot -d A
 ```
 
 好了，你的第一个“操作系统”就已经完成了。这张软盘已经是一张引导盘了。把它放到你的软驱中重新启动计算机，从软盘引导，你看到了什么？计算机显示出你的字符串了！红色的“Hello,OSworld!”，多么奇妙啊，你的“操作系统”在运行了！如果使用虚拟机比如Bochs的话（下文中将会有关于Bochs的详细介绍），你应该能看到如图1.1所示的画面(8)。
-
-```
-# 创建软盘映像
-# dd if=/dev/zero of=floppy.img bs=512 count=2880
-
-# 将内容放到第一个扇区
-# dd if=boot of=floppy.img bs=512 count=1 conv=notrunc
-
-# 启动虚拟机
-# qemu -fda floppy.img 
-```
-
-![2020-02-08-18-18-09.png](./images/2020-02-08-18-18-09.png)
