--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
+++ b/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/2. 十分钟完成的操作系统.md
@@ -46,7 +46,9 @@ nasm boot.asm -o boot
 # qemu -fda boot
 ```
 
-![2020-02-08-18-18-09.png](./images/2020-02-08-18-18-09.png)
+建议在Linux图形环境下操作, 然后VNC进去就能看到
+
+![2020-02-09-00-23-10.png](./images/2020-02-09-00-23-10.png)
 
 在Windows下可以这样做(7)：
 
