--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/4. 字符模式下的显卡驱动.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/4. 字符模式下的显卡驱动.md
@@ -1,17 +1,25 @@
+
 本章将开始描述内核对屏幕输出的控制。
 
-1MB以下的地址空间分布
----------------------
+# 1MB以下的地址空间分布
 
-在第二章我们简单的谈过地址空间的概念，并提到4G的地址空间并非全部指向主存储器，而是有部分的地址分给了其他外设。特别地，在地址空间的最低1MB处，有很多地址是属于外部设备的，下图描绘了该处地址映射的分布情况：
+在第二章我们简单的谈过地址空间的概念，并提到4G的地址空间并非全部指向主存储器，而是有部分的地址分给了其他外设。
 
-![低端地址空间的映射关系](https://raw.githubusercontent.com/hurley25/wiki/gh-pages/_posts/picture/chapt4/BIOS-mem.png)
+特别地，在**地址空间的最低1MB处**，有很多地址是属于**外部设备**的，下图描绘了该处地址映射的分布情况：
 
-在PC上要显示文字，通常需要显示器和显卡这两个硬件设备。一般来说显卡负责提供显示内容，并控制具体的显示模块和状态。显示器的职责是负责将显卡呈递的内容可视化的显示出来。既然显卡需要控制显示的数据，自然就需要存储这些待显示的内容，所以显卡就有自己的存储区域。这个存储区域叫做显示存储器（Video
-RAM，VRAM），简称显存。当然，访问显存就需要地址。CGA/EGA+ Chroma text video buffer 这个区域映射的就是工作在文本模式的显存。同时显卡还有另外一个工作模式叫做图形模式，这个模式是目前最最常用的模式。
+![低端地址空间的映射关系](./picture/chapt4/BIOS-mem.png)
 
-显卡在文本模式下的显示规则
---------------------------
+在PC上要**显示文字**，通常需要**显示器**和**显卡**这两个硬件设备。
+
+- 一般来说**显卡负责提供显示内容**，并控制具体的**显示模块**和**状态**。
+
+- **显示器**的职责是负责将**显卡呈递的内容**可视化的**显示**出来。
+
+既然**显卡**需要控制显示的数据，自然就需要**存储这些待显示的内容**，所以显卡就有自己的**存储区域**。这个存储区域叫做**显示存储器**（`Video RAM，VRAM`），简称显存。当然，访问显存就需要地址。`CGA/EGA+ Chroma text video buffer` 这个区域映射的就是工作在**文本模式的显存**。
+
+同时显卡还有另外一个工作模式叫做**图形模式**，这个模式是目前最最常用的模式。
+
+# 显卡在文本模式下的显示规则
 
 我们知道，对于一个字符的编码通常有输入码、内码和字模码三种。其中字模码定义了一个字符在屏幕上显示的点阵坐标。通常显卡内置一套关于基本英文字符的显示是很容易做到的，而内置汉字的显示就较为麻烦。[^1]在这篇文档中我们只使用显卡的文本模式，不会涉及到图形模式的内容。因为一旦使用了图形模式的内容，我们就需要自行定义字符的字模码了，这很繁琐而且对我们理解操作系统原理的意义不是很大。所以我们只使用显卡的文本模式进行屏幕显示控制。所有在PC上工作的显卡，在加电初始化之后都会自动初始化到80\*25的文本模式。[^2]在这个模式下，屏幕被划分为25行，每行可以显示80个字符，所以一屏可以显示2000个字符。上图中的0xB8000～0xBFFFF这个地址段便是映射到文本模式的显存的。当访问这些地址的时候，实际上读写的是显存区域，而显卡会周期性的读取这里的数据，并且把它们按顺序显示在屏幕上。
 
