--- Auto-Git Commit ---

--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/4. 字符模式下的显卡驱动.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/4. 字符模式下的显卡驱动.md
@@ -23,17 +23,23 @@
 
 我们知道，对于**一个字符的编码**通常有**输入码**、**内码**和**字模码**三种。
 
-## 字模ma
+## 字模码
 
 其中**字模码**定义了**一个字符**在屏幕上显示的**点阵坐标**。
 
-通常显卡内置一套关于**基本英文字符**的显示是很容易做到的，而**内置汉字的显示**就较为麻烦。在这篇文档中我们**只使用**显卡的**文本模式**，不会涉及到图形模式的内容。因为一旦使用了图形模式的内容，我们就需要**自行定义字符的字模码**了，这很繁琐而且对我们理解操作系统原理的意义不是很大。所以我们只使用显卡的文本模式进行屏幕显示控制。所有**在PC上工作的显卡**，在**加电初始化之后**都会自动初始化到`80\*25`的**文本模式**。在这个模式下，屏幕被划分为**25行**，每行可以显示**80个字符**，所以一屏可以显示**2000个字符**。上图中的`0xB8000～0xBFFFF`这个地址段便是映射到**文本模式的显存**的。当**访问这些地址**的时候，实际上读写的是**显存区域**，而**显卡**会**周期性**的**读取这里的数据**，并且把它们按顺序显示在屏幕上。
+通常显卡内置一套关于**基本英文字符**的显示是很容易做到的，而**内置汉字的显示**就较为麻烦。
+
+在这篇文档中我们**只使用**显卡的**文本模式**，不会涉及到图形模式的内容。因为一旦使用了图形模式的内容，我们就需要**自行定义字符的字模码**了，这很繁琐而且对我们理解操作系统原理的意义不是很大。所以我们只使用显卡的文本模式进行屏幕显示控制。
+
+所有**在PC上工作的显卡**，在**加电初始化之后**都会自动初始化到`80\*25`的**文本模式**。在这个模式下，屏幕被划分为**25行**，每行可以显示**80个字符**，所以一屏可以显示**2000个字符**。上图中的`0xB8000～0xBFFFF`这个地址段便是映射到**文本模式的显存**的。
+
+当**访问这些地址**的时候，实际上读写的是**显存区域**，而**显卡**会**周期性**的**读取这里的数据**，并且把它们按顺序显示在屏幕上。
 
 ## 内码
 
 那么，按照**什么规则显示**呢？这就要谈到**内码**了。
 
-**内码**定义了字符在内存中**存储的形式**，而英文编码就是大家所熟知的**ASCII**（`American Standard Code for Information Interchange，美国信息交换标准代码`）码了。
+**内码**定义了**字符在内存！！！** 中**存储的形式！！！**，而英文编码就是大家所熟知的**ASCII**（`American Standard Code for Information Interchange，美国信息交换标准代码`）码了。
 
 对应的关系很简单，从`0xB8000`这个地址开始，**每2个字节**表示屏幕上显示的**一个字符**。
 
