--- a/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
+++ b/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
@@ -17,3 +17,5 @@ C语言基础, 驱动开发基础/内核
 使用VMware虚拟机, Windows XP Professional系统, 没有考虑多核多线程, 所以使用了单核单线程. 勾选VT-x.
 
 ![2020-01-25-15-44-00.png](./images/2020-01-25-15-44-00.png)
+
+VT enabled, 1 CPU, 使用小内存 256MB 即可.
