--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -4,7 +4,7 @@
 
 # 使用符号__X64
 
-为了做到64位和32位版本只维护一份代码, 需要将代码以32位形式进行编译. 同时, 引进__X64符号控制机器码的生成.
+为了做到64位和32位版本**只维护一份代码**, 需要将代码以**32位形式**进行编译. 同时, 引进__X64符号控制机器码的生成.
 
 ```assembly
 bits 32             ;;重要, 以32位形式进行编译
@@ -21,13 +21,13 @@ bits 32             ;;重要, 以32位形式进行编译
         ... ...
 ```
 
-注意: 由于在64-bit模式下, 绝大多数指令的操作位默认为32位, 导致多数指令机器码在64位和32位环境下是一样的! 只有少量的指令, 我们需要进行特别处理. 因此, 引进`__X64`是为了解决某些特定指令的使用.
+注意: 由于在`64-bit`模式下, **绝大多数指令**的**操作位**默认为**32位**, 导致多数指令机器码在64位和32位环境下是一样的! 只有**少量的指令**, 我们需要进行特别处理. 因此, 引进`__X64`是为了解决某些特定指令的使用.
 
-代码统一在32位下编译后, 处理器无论运行在64-bit模式下, 还是32位保护模式下, 都能正确执行. 当然, 除了某些需要特殊处理器的指令, 下面了解一下.
+代码统一在**32位下编译**后, 处理器无论运行在`64-bit`模式下, 还是32位保护模式下, 都能正确执行. 当然, 除了某些需要特殊处理器的指令, 下面了解一下.
 
 # 指令操作数
 
-64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的operand size(操作数宽度), 以及address size(地址宽度)相关知识. 更详细介绍看 http://www.mouseos.com/x64/index.html .
+64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的`operand size`(**操作数宽度**), 以及`address size`(**地址宽度**)相关知识. 更详细介绍看 http://www.mouseos.com/x64/index.html .
 
 指令的操作数大小及地址大小有default(默认)和effective(有效)两种情况. 表1\-1列出处理器各种工作模式下的default operand size(默认操作数宽度)与default address size(默认地址宽度), effective operand size(有效的操作数宽度)与effective address size(有效的地址宽度).
 
