--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
@@ -1,17 +1,17 @@
 
 在x86/x64体系中, **指令处理的数据**分为`fundamental`（基础）和`numeric`（数值）两大类。
 
-**基础类型**包括：byte（8位），word（16位），doubleword（32位），以及quadword（64位），它们代表指令能一次性处理的数据宽度。
+- **基础类型**包括：`byte`（8位），`word`（16位），`doubleword`（32位），以及`quadword`（64位），它们代表指令能一次性处理的**数据宽度**。
 
-numeric数据类型使用在运算类指令上，总结来说x86/x64体系的运算类指令能处理下面四大类数据。
+- **numeric数据类型**使用在**运算类指令**上，总结来说x86/x64体系的**运算类指令**能处理下面**四大类数据**。
 
-① integer（整型数）：包括unsigned类型和singed类型。
+    ① `integer（整型数）`：包括**unsigned类型**和**singed类型**。
 
-② floating-point（浮点数）：包括single-precision floating-point（单精度浮点数），double-precision floating-point（双精度浮点数），以及double extended-precision floatingpoint（扩展双精度浮点数）。
+    ② `floating-point（浮点数）`：包括`single-precision floating-point`（单精度浮点数），`double-precision floating-point`（双精度浮点数），以及`double extended-precision floatingpoint`（扩展双精度浮点数）。
 
-③ BCD（binary-code decmial integer）：包括non-packed BCD码和packed-BCD码。
+    ③ `BCD（binary-code decmial integer）`：包括non-packed BCD码和packed-BCD码。
 
-④ SIMD（single instruction，multiple data）：这是属于packed类型的数据。
+    ④ `SIMD（single instruction，multiple data）`：这是属于packed类型的数据。
 
 SIMD数据是在一个operand（操作数）里集成了多个integer、floating-point或者BCD数据。SIMD指令可以一性次同时处理这些数据。
 
