--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
@@ -85,29 +85,45 @@ signed数是以二进制的补码来表示，以4位二进制数为例，求出-
 
 # floating-point数
 
-现在的计算机浮点数格式都遵循IEEE754标准。在x86/x64体系中有三种浮点数。
+现在的计算机浮点数格式都遵循`IEEE754`标准。
 
-① single-precision floating point（单精度浮点数）：使用23位的精度。
+在x86/x64体系中有**三种浮点数**。
 
-② double-precision floating point（双精度浮点数）：使用52位的精度。
+① `single-precision floating point`（单精度浮点数）：使用23位的精度。
 
-③ double extended-precision floating point（扩展双精度浮点数）：使用64位的精度。
+② `double-precision floating point`（双精度浮点数）：使用52位的精度。
+
+③ `double extended-precision floating point`（扩展双精度浮点数）：使用64位的精度。
 
 x87 FPU的硬件上使用扩展双精度浮点类型，所有浮点数最终都要转为扩展双精度浮点数进行处理（使用64位精度）。
-二进制格式
+
+## 二进制格式
+
 在计算机上，浮点数需要换化为二进制格式进行处理，分为3个部分：sign（符号位），exponent（指数位），以及significand（有效数位），如下所示。
 ￼
+![2020-02-09-21-45-47.png](./images/2020-02-09-21-45-47.png)
+
 最高位为符号位，单精度浮点数的exponent位是8位，significand位是23位；双精度浮点数的exponent位是11位，significand位是52位。
+
 在单精度和双精度浮点数里，它们的significand部分有一个隐式的integer位（或被称为J-bit），这个位的值固定为1。因此，单精度浮点数的精度实际为24位，而双精度浮点数的精度实际为53位。
-扩展双精度浮点数
+
+## 扩展双精度浮点数
+
 在扩展双精度浮点数里，significand部分为64位，exponent为15位，如下所示。
+
+![2020-02-09-21-47-53.png](./images/2020-02-09-21-47-53.png)
 ￼
 在扩展双精度浮点数里，它的integer位是显式的，在normal（合规的）数里，这个位必须为1，否则属于denormal（不合规的）数。
-normalized（规格化）
+
+## normalized（规格化）
+
 在IEEE754里，规格化是浮点数的基础。正常情况下机器中的浮点数使用规格化的格式，这类浮点数被称为normal数。
+
 看看这个浮点数：0.625，在机器中是如何表示的呢？
+
 首先需要转化为规格化的科学计数形式。
 0.625=625/1000=5/8=5/23=101×2-3=1.01×2-1
+
 于是0.625的二进制科学计数法表达是1.01×2-1。
 在IEEE 754中规定规格化数的significand（有效数）部分第1位是1，不能是0。如下所示。
 ￼
