--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/4. 16位编程、32位编程以及64位编程.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/4. 16位编程、32位编程以及64位编程.md
@@ -50,15 +50,28 @@ mov eax，1                   ； 机器码是：b8 01 00 00 00
 64位的r8～r15寄存器分割出相对应的8位、16位及32位寄存器形式为：r8b～r15b、r8w～r15w，以及r8d～r15d。
 
 ```
-￼ bits 64      ； 为64位代码编译￼ mov r8b，1￼ mov spl，r8b
+￼bits 64      ； 为64位代码编译￼
+mov r8b，1￼
+mov spl，r8b
 ```
 
 比如上面这两条指令必须在64位下使用，r8b和spl寄存器在16位和32位下是无效的。
 
-2.4.2 操作数大小
+# 操作数大小
 
 在16位编程和32位编程下，寄存器没有使用上的不便，32位的操作数依旧可以在16位编程里使用，而16位的操作数也可以在32位编程下使用。
 
-￼ bits 16￼ push word 1                         ； 16位操作数￼ push dword 1                        ； 32位操作数￼ call ax       ； 16 位操作数￼ call eax       ； 32 位操作数￼ bits 32￼ push word 1                         ； 16位操作数￼ push dword 1                        ； 32位操作数￼ call ax       ； 16 位操作数￼ call eax       ； 32 位操作数
+```
+bits 16￼
+push word 1                         ； 16位操作数￼
+push dword 1                        ； 32位操作数￼
+call ax       ； 16 位操作数￼
+call eax       ； 32 位操作数￼
+bits 32￼
+push word 1                         ； 16位操作数￼
+push dword 1                        ； 32位操作数￼
+call ax       ； 16 位操作数￼
+call eax       ； 32 位操作数
+```
 
 上面的代码完全可以用在16编程和32位编程
