--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/2. 数据类型.md
@@ -230,7 +230,7 @@ infinite（无穷大）数
 
 显然，这是与finite数相对的。在无穷大数里值是固定的，分为+∞（正无穷大）和-∞（负无穷大）。exponent和significand的值如下所示。
 ￼
-
+![2020-02-09-22-08-41.png](./images/2020-02-09-22-08-41.png)
 
 对于扩展双精度来说，由于它的J位是显式的，必须为1值（否则是unsupported类型），因此significand的值为0x80000000_00000000。
 
@@ -241,3 +241,13 @@ NaN（not a number）数
 NaN数与infinite数的区别是：infinite数的significand部分为0值（扩展双精度的bit63位为1）。而NaN数的significand部分不为0值。
 
 NaN数包括下列两类。
+
+① SNaN（Signaling NaN）数：SNaN数表示是一种比较严重的错误值。
+
+② QNaN（Quiet NaN）数：在一般情况下，QNaN数是可接受的。
+
+SNaN和QNaN数的编码区别在于significand部分的不同，如下所示。
+
+![2020-02-09-22-09-01.png](./images/2020-02-09-22-09-01.png)
+
+.....
