--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/2. 机器语言.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/2. 机器语言.md
@@ -1,9 +1,9 @@
 
-一条机器指令由相应的二进制数标识，直接能被机器识别。在汇编语言出现之前，使用机器指令编写程序是直接将二进制数输入计算机中。
+**一条机器指令**由相应的**二进制数标识**，直接能**被机器识别**。在汇编语言出现之前，使用机器指令编写程序是直接将二进制数输入计算机中。
 
-C语言中的c=a+b在机器语言中应该怎样表达？
+>C语言中的c=a+b在机器语言中应该怎样表达？
 
-这是一个很麻烦的过程，a、b和c都是变量，在机器语言中应该怎样表达？C语言不能直接转换为机器语言，要先由C编译器译出相当的assembly，然后再由assembler生成机器指令，最终再由链接器将这些变量的地址定下来。
+这是一个很麻烦的过程，a、b和c都是变量，在机器语言中应该怎样表达？**C**语言**不能**直接转换为**机器语言**，要先由C编译器译出相当的**assembly**，然后再由**assembler**生成**机器指令**，最终再由**链接器**将这些**变量的地址定下来**。
 
 我们来看看怎样转化机器指令。首先用相应的汇编语言表达出来。
 
