--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/2. 机器语言.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/2. 机器语言.md
@@ -1,11 +1,37 @@
 
-**一条机器指令**由相应的**二进制数标识**，直接能**被机器识别**。在汇编语言出现之前，使用机器指令编写程序是直接将二进制数输入计算机中。
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 机器指令](#1-机器指令)
+- [2. C语言转换成机器语言](#2-c语言转换成机器语言)
+  - [2.1. 汇编语言](#21-汇编语言)
+  - [2.2. 汇编成机器语言](#22-汇编成机器语言)
+  - [2.3. 链接成最终机器语言](#23-链接成最终机器语言)
+
+<!-- /code_chunk_output -->
+
+# 1. 机器指令
+
+**一条机器指令**由相应的**二进制数标识**，直接能**被机器识别**。
+
+在汇编语言出现之前，使用机器指令编写程序是直接将二进制数输入计算机中。
+
+# 2. C语言转换成机器语言
 
 >C语言中的c=a+b在机器语言中应该怎样表达？
 
-这是一个很麻烦的过程，a、b和c都是变量，在机器语言中应该怎样表达？**C**语言**不能**直接转换为**机器语言**，要先由C编译器译出相当的**assembly**，然后再由**assembler**生成**机器指令**，最终再由**链接器**将这些**变量的地址定下来**。
+这是一个很麻烦的过程，a、b和c都是变量，在机器语言中应该怎样表达？
+
+**C**语言**不能**直接转换为**机器语言**，要
+
+- 先由C编译器译出相当的**assembly**，
+- 然后再由**assembler**生成**机器指令**，
+- 最终再由**链接器**将这些**变量的地址定下来**。
 
 我们来看看**怎样转化机器指令**。
+
+## 2.1. 汇编语言
 
 首先用相应的**汇编语言**表达出来。
 
@@ -15,7 +41,11 @@ add eax，[b]                ； 执行 a+b
 mov [c]，eax                ； 放到 c 中
 ```
 
-在x86机器中，如果**两个内存操作数**要进行加法运算，不能直接相加，其中一方必须是寄存器，至少要将一个操作数放入寄存器中。这一表达已经是最简单形式了，实际上当然不止这么简单，还要配合程序的上下文结构。如果其中一个**变量只是临时性**的(即**局部变量**)，**C编译器**可能会选择**不放入内存**中。那么这些变量是局部变量还是外部变量呢？编译器首先要决定**变量的地址**。
+在x86机器中，如果**两个内存操作数**要进行加法运算，**不能直接相加**，其中一方必须是寄存器，至少要将一个操作数放入寄存器中。
+
+这一表达已经是最简单形式了，实际上当然不止这么简单，还要配合程序的上下文结构。
+
+如果其中一个**变量只是临时性**的(即**局部变量**)，**C编译器**可能会选择**不放入内存**中。那么这些变量是**局部变量**还是**外部变量**呢？**编译器**首先要决定**变量的地址**。
 ￼
 ```
 mov eax，[ebp-4]                ； 变量 a 是局部变量
@@ -23,7 +53,11 @@ add eax，[ebp-8]                ； 执行 a+b，变量b也是局部变量
 mov [0x0000001c]，eax          ； 放到 c 中，变量c可能是外部变量
 ```
 
-变量a和b是在stack上。在大多数的平台下，**变量c**会放入到`.data`节，可是在进行**链接之前**，**c的地址**可能只是**一个偏移量**，不是真正的地址，链接器将负责用变量c的**真正地址**来代替这个偏移值。
+**变量a和b**是在**stack**上。
+
+在大多数的平台下，**变量c**会放入到`.data`节，可是在进行**链接之前**，**c的地址**可能只是**一个偏移量**，不是真正的地址，链接器将负责用变量c的**真正地址**来代替这个偏移值。
+
+## 2.2. 汇编成机器语言
 
 上面的汇编语言译成机器语言为
 
@@ -33,11 +67,13 @@ mov [0x0000001c]，eax          ； 放到 c 中，变量c可能是外部变量
 a3 1c 00 00 00         ； 对应于  mov [0x0000001c]，eax
 ```
 
-x86机器是CISC（复杂指令集计算）体系，**指令的长度**是**不固定**的，比如上述前面两条指令是3字节，最后一条指令是5字节。
+x86机器是CISC（复杂指令集计算）体系，**指令的长度**是**不固定**的，比如上述**前两条指令**是**3字节**，**最后一条指令**是**5字节**。
 
-> x86机器指令长度最短1字节，最长15字节。
+> x86机器指令长度**最短1字节**，**最长15字节**。
 
-最后，假定`.data`节的**基地址**是`0x00408000`，那么**变量c的地址**就是`0x00408000+0x1c=0x0040801c`，经过链接后，最后一条机器指令变成
+## 2.3. 链接成最终机器语言
+
+最后，假定`.data`节的**基地址**是`0x00408000`，那么**变量c的地址**就是`0x00408000+0x1c=0x0040801c`，经过**链接**后，最后一条机器指令变成
 
 ```
 a3 1c 80 40 00         ； 原始汇编表达形式： mov [c]，eax
