--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/3. Hello world.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/3. Hello world.md
@@ -100,10 +100,12 @@ C编译器大概会如下这样处理。
 ￼push hello_message￼
 call printf
 ```
+
 在汇编程序里尽量采用寄存器传递参数，正如前面的hello world程序那样：
 
 ```
-￼mov si，hello_message  ； 使用 si寄存器传递参数￼ call puts
+￼mov si，hello_message  ； 使用 si寄存器传递参数￼
+call puts
 ```
 
 使用寄存器传递参数能获得更高的效率。要注意在程序中修改参数值时，是否需要参数的不变性，按照惯例传递的参数通常是volatile（可变）的，可是在某些场合下保持参数的nonvolatile（不变）能简化代码，应尽量统一风格。
