--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -280,6 +280,14 @@ Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(E
 
 # 5. 链接: 从目标文件和其他库的目标文件生成一个可执行文件
 
+从 `.c` C源码生成:
+
+`gcc HelloWorld.c -o HelloWorld`
+
+从 `.o` 汇编代码生成:
+
+`gcc HelloWorld.o -o HelloWorld`
+
 我们接下来看最后的链接过程。
 
 这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
