--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -120,6 +120,8 @@ gcc处理HelloWorld.c的大致过程：
 
 括号中我注明了各个过程中实际执行任务的程序名称：`预处理器cpp`、`编译器cc1`、`汇编器as`以及最后的`链接器ld`。
 
+注: 整个过程除了使用gcc也可单独使用这几个工具, 详细见`Architecture/Assembly/[32位]Linux汇编入门`
+
 # 2. 预处理: 转换成新C源码文件
 
 `gcc -E HelloWorld.c -o HelloWorld.i`
@@ -657,6 +659,10 @@ mov [0x0000001c]，eax          ； 放到 c 中，变量c可能是外部变量
 在大多数的平台下，**变量c**会放入到`.data`节，可是在进行**链接之前**，**c的地址**可能只是**一个偏移量**，不是真正的地址，链接器将负责用变量c的**真正地址**来代替这个偏移值。
 
 ## 6.4. 汇编成机器语言
+
+```
+objdump -S add.o
+```
 
 上面的汇编语言译成机器语言为
 
