--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/05-bootmem_init/12. 启动期间的内存管理之bootmem_init初始化内存管理.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/05-bootmem_init/12. 启动期间的内存管理之bootmem_init初始化内存管理.md
@@ -14,7 +14,7 @@
     - [1.5.3 移交早期的分配器到内存管理器](#153-移交早期的分配器到内存管理器)
 - [2 buddy系统初始化前的准备工作](#2-buddy系统初始化前的准备工作)
   - [2.1 回到setup_arch函数(当前已经完成的工作)](#21-回到setup_arch函数当前已经完成的工作)
-  - [2.2 bootmem\_init函数初始化内存结点和管理域](#22-bootmem_init函数初始化内存结点和管理域)
+  - [2.2 bootmem_init函数初始化内存结点和管理域](#22-bootmem_init函数初始化内存结点和管理域)
   - [2.3 zone\_sizes\_init函数](#23-zone_sizes_init函数)
 - [3 free\_area\_init\_nodes初始化NUMA管理数据结构](#3-free_area_init_nodes初始化numa管理数据结构)
   - [3.1 代码注释](#31-代码注释)
@@ -281,7 +281,7 @@ zone\_sizes\_init函数：
 
 内核提供了一个**通用的框架**,用于将上述信息转换为伙伴系统预期的**节点**和**内存域数据结构**,但是在此之前各个体系结构必须自行建立相关结构. 
 
-## 2.2 bootmem\_init函数初始化内存结点和管理域
+## 2.2 bootmem_init函数初始化内存结点和管理域
 
 arm64架构下, 在setup\_arch中通过paging\_init函数初始化内核分页机制之后,内核通过`bootmem_init()`开始完成**内存结点和内存区域的初始化**工作,该函数定义在[arch/arm64/mm/init.c, line 306](http://lxr.free-electrons.com/source/arch/arm64/mm/init.c?v=4.7#L306)
 
