--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/4. 16位编程、32位编程以及64位编程.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第2章 x86x64编程基础/4. 16位编程、32位编程以及64位编程.md
@@ -11,26 +11,26 @@ bits 64￼
 … …                               ; 以下是 64位代码
 ```
 
-不用担心这里会有什么问题，**编译器**会为**每部分**生成**正确的机器指令**。关于16位机器码、32位机器码以及64位机器码，详见笔者个人网站里的《x86/x64指令系统》篇章，地址为 http：//www.mouseos.com/x64/default.html 。
+不用担心这里会有什么问题，**编译器**会为**每部分**生成**正确的机器指令**。关于16位机器码、32位机器码以及64位机器码，详见笔者个人网站里的《x86/x64指令系统》篇章，地址为 http://www.mouseos.com/x64/default.html 。
 
 >16位编程、32位编程，以及64位编程有什么不同之处？
 
 这确实需要简单了解一下。
 
-#通用寄存器
+# 通用寄存器
 
 在16位和32位编程里，可以使用的通用寄存器是一样的，如下所示。
 
 ￼![2020-02-09-21-22-18.png](./images/2020-02-09-21-22-18.png)
 
-在16位编程里可以使用32位的寄存器，在32位编程里也可以使用16位的寄存器，编译器会生成正确的机器码。
+在**16位编程**里可以使用**32位的寄存器**，在**32位编程**里也可以使用**16位的寄存器**，编译器会生成**正确的机器码**。
 
 ```
 bits 16      ； 为16 位代码而编译￼
 mov eax，1                   ； 机器码是：66 b8 01 00 00 00
 ```
 
-上面这段代码为16位代码编译，使用了32位的寄存器，编译器会自动加上default operand-size override prefix（66H字节），这个66H字节用来调整为正确的操作数。
+上面这段代码为**16位代码编译**，使用了**32位的寄存器**，编译器会自动加上`default operand-size override prefix`（66H字节），这个`66H字节用来调整为正确的操作数。
 
 ```
 ￼bits 32      ； 为32位代码而编译￼
