--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第12章 Long-mode/5. long-mode的指令环境.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第12章 Long-mode/5. long-mode的指令环境.md
@@ -3,16 +3,16 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-* [1 64位模式的操作数](#1-64位模式的操作数)
-	* [1.1 默认操作数大小](#11-默认操作数大小)
-	* [1.2 默认操作数为64位的指令](#12-默认操作数为64位的指令)
-* [2 64位模式下的无效指令](#2-64位模式下的无效指令)
-* [3 64位模式下的寻址模式](#3-64位模式下的寻址模式)
-	* [3.1 默认地址大小](#31-默认地址大小)
-	* [3.2 stack address size（栈地址大小）](#32-stack-address-size栈地址大小)
-	* [3.3 stack address（栈地址）与operand address（操作数地址）](#33-stack-address栈地址与operand-address操作数地址)
-	* [3.4 指令指针size与operand size](#34-指令指针size与operand-size)
+- [0 概述](#0-概述)
+- [1 64位模式的操作数](#1-64位模式的操作数)
+  - [1.1 默认操作数大小](#11-默认操作数大小)
+  - [1.2 默认操作数为64位的指令](#12-默认操作数为64位的指令)
+- [2 64位模式下的无效指令](#2-64位模式下的无效指令)
+- [3 64位模式下的寻址模式](#3-64位模式下的寻址模式)
+  - [3.1 默认地址大小](#31-默认地址大小)
+  - [3.2 stack address size（栈地址大小）](#32-stack-address-size栈地址大小)
+  - [3.3 stack address（栈地址）与operand address（操作数地址）](#33-stack-address栈地址与operand-address操作数地址)
+  - [3.4 指令指针size与operand size](#34-指令指针size与operand-size)
 
 <!-- /code_chunk_output -->
 
@@ -20,6 +20,7 @@
 
 在x86/x64体系的指令执行环境中，有几个知识是很重要的：**operand\-size（操作数大小**），**address\-size（地址大小**），**stack\-address size（栈地址大小**），以及**instruction pointer size（指令指针大小**）。
 
+参见 `Virtualization/Learning/处理器虚拟化/1.2.2`
 # 1 64位模式的操作数
 
 在long\-mode下，当CS.L=1并且CS.D=0时，处理器将运行在64位模式。可是并不代表指令的操作数是64位的。
