--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -28,9 +28,11 @@ bits 32             ;;重要, 以32位形式进行编译
 
 # 指令操作数
 
-64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的`operand size`(**操作数宽度**), 以及`address size`(**地址宽度**)相关知识. 更详细介绍看 http://www.mouseos.com/x64/index.html .
+64位和32位混合编译之前, 有必要先了解下x86/64体系中**指令**的`operand size`(**操作数宽度**), 以及`address size`(**地址宽度**)相关知识. 更详细介绍看 http://www.mouseos.com/x64/index.html .
 
-指令的操作数大小及地址大小有default(默认)和effective(有效)两种情况. 表1\-1列出处理器各种工作模式下的default operand size(默认操作数宽度)与default address size(默认地址宽度), effective operand size(有效的操作数宽度)与effective address size(有效的地址宽度).
+**指令**的**操作数大小**及**地址大小**有**default**(默认)和**effective**(有效)两种情况. 
+
+表1\-1列出处理器各种工作模式下的default operand size(默认操作数宽度)与default address size(默认地址宽度), effective operand size(有效的操作数宽度)与effective address size(有效的地址宽度).
 
 ![2020-01-24-22-29-47.png](./images/2020-01-24-22-29-47.png)
 
