--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -15,7 +15,7 @@
 - 配置选项可能依体系结构而不同。
 - 配置语言不应该过于复杂，因为编写配置脚本并非大多数内核程序员喜欢做的事情。 
 
-**配置信息**应该**散布在整个源代码树**中，使得没必要维护一个巨型的中枢配置文件，这种巨型配置文件将难于打补丁。在代码包含了可配置选项的**每个子目录**中，都必须有一个配置文件。
+**配置信息**应该**散布在整个源代码树**中，使得**没必要**维护一个**巨型的中枢配置文件**，这种巨型配置文件将难于打补丁。在代码包含了可配置选项的**每个子目录**中，都必须有一个配置文件。
 
 # 配置文件示例
 
