--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -21,8 +21,8 @@
 
 配置文件的语法并不特别复杂，如以下取自USB子系统的例子所示(稍作修改):
 
-```config
-drivers/usb/Kconfig
+```Kconfig
+// drivers/usb/Kconfig
 #
 # USB device configuration
 #
