--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -93,11 +93,11 @@ endif # USB_SUPPORT
 
 ![2020-01-25-21-00-10.png](./images/2020-01-25-21-00-10.png)
 
-menuconfig产生一个菜单项，其标题是一个字符串，在这里是USB support。在用户用make menuconfig或图形化的make xconfig或make gconfig配置内核时，该菜单项会作为一个新子树的根 出现。所做的选择保存在一个变量中，这里是USB_SUPPORT，有两个可能的值，因为这是一个布尔型变量，由bool标明。如果取消对USB_SUPPORT的选择，那么配置树中不会出现与USB相关的其他配置 信息，这可以由if字句保证。
+menuconfig产生一个菜单项，其标题是一个字符串，在这里是USB support。在用户用make menuconfig或图形化的make xconfig或make gconfig配置内核时，该菜单项会作为一个新子树的根出现。所做的选择保存在一个变量中，这里是`USB_SUPPORT`，有两个可能的值，因为这是一个布尔型变量，由bool标明。如果取消对`USB_SUPPORT`的选择，那么配置树中不会出现与USB相关的其他配置信息，这可以由if字句保证。
 
-通过source，可以将更多的配置文件关联进来(按照惯例，它们都名为Kconfig)。这些配置文件的文本内容，将直接包含到嵌入的配置文件中进行解释。
+通过`source`，可以将更多的配置文件**关联进来**(按照惯例，它们都名为Kconfig)。这些配置文件的文本内容，将直接包含到嵌入的配置文件中进行解释。
 
-comment在配置选项列表中创建一个注释。注释的文本会显示，但用户不能进行选择。
+comment在**配置选项列表中创建一个注释**。注释的文本会显示，但用户**不能进行选择**。
 
 实际的配置选项通过config指定。对每个选项来说，只有一个config类型的数据项。config之后的字符串称之为配置符号(configuration symbol)，可接受用户选择。每个选项都需要一个类型，来定义用户可以进行什么样类型的选择。在本例中，选择的类型是三态的，即可以选择下面的一个: “compiled in”、“modular”或“do not compile”。根据所做的选择，配置符号会分布赋值y、m、n。除了三态之外，内核还提供了其他的选择类型，将在本节稍后讨论。
 
@@ -319,16 +319,16 @@ depends [on] <expr>
 
 按下列步骤处理配置信息。
 
-(1) 内核首先由用户配置。这预先假定已经准备好所有可能选项的一个列表，并以文本或图形方 式呈现出来(可用的配置已经根据所选的体系结构进行了限制，这一点无须用户干涉)。
+(1) 内核**首先由用户配置**。这预先假定已经准备好所有可能选项的一个列表，并以文本或图形方式呈现出来(可用的配置已经根据所选的体系结构进行了限制，这一点无须用户干涉)。
 
-(2) 接下来将用户的选择保存到一个独立的文件中，一直保持到下一次(重新)配置之前，并保 证所用的工具能够访问该文件。
+(2) 接下来将**用户的选择**保存到一个**独立的文件**中，一直保持到下一次(重新)配置之前，并保证所用的工具能够访问该文件。
 
-(3)所选的配置符号必须存在，对于由一系列Makefile实现的联编系统和内核源代码中的预处理器 语句来说，都要求如此。
+(3)**所选的配置符号必须存在**，对于由一系列**Makefile实现的联编系统**和**内核源代码中的预处理器语句**来说，都要求如此。
 
 在发起内核配置时，有各种make目标(make destconfig)。各自都有不同的用途。
 
 - menuconfig提供了一个控制台驱动的前端，而xconfig和gconfig则提供了基于各种X11工具包(Qt或GTK)的图形用户界面。
-- oldconfig分析已经保存在.config中的配置选项，对可能在内核更新之后添加、但尚未进行选择的选项作出提示。
+- `oldconfig`分析**已经保存**在`.config`中的配置选项，对可能在内核更新之后添加、但尚未进行选择的选项作出提示。
 - defconfig应用由体系结构维护者定义的默认配置(相关信息保存在arch/arch/defconfigk中)。
 - allyesconfig创建一个新的配置文件，其中所有选择都设置为y(在支持y值的选项处)。allmodconfig也将所有选项都设置为y，但在可能的情况下会使用m。allnoconfig产生一个最低限度的配置，其中删除了编译关键内核组件不需要的其他选项。 
 
