--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -332,7 +332,7 @@ depends [on] <expr>
 - defconfig应用由体系结构维护者定义的默认配置(相关信息保存在arch/arch/defconfigk中)。
 - allyesconfig创建一个新的配置文件，其中所有选择都设置为y(在支持y值的选项处)。allmodconfig也将所有选项都设置为y，但在可能的情况下会使用m。allnoconfig产生一个最低限度的配置，其中删除了编译关键内核组件不需要的其他选项。 
 
-这三种目标在建立新的内核发布版时，用于进行测试。通常，最终用户在使用它们时都存在问题。 所有配置选项都必须分析各个Kconfig文件中的配置信息，还必须保存结果配置。内核源代码为此提供了libkconfig库。它提供了例程来执行适当的任务。本附录不讨论解析器的实现，其中采用 了Bison和Flex这两个解析器和词法分析器的生成工具。相关的源代码可参见scripts/kconfig/zconf.y和zconf.l。
+这三种目标在建立新的内核发布版时，用于进行测试。通常，最终用户在使用它们时都存在问题。**所有配置选项**都必须分析**各个Kconfig文件**中的配置信息，还必须保存结果配置。**内核源代码**为此提供了**libkconfig库**。它提供了例程来执行适当的任务。本附录不讨论解析器的实现，其中采用了Bison和Flex这两个解析器和词法分析器的生成工具。相关的源代码可参见`scripts/kconfig/zconf.y`和`zconf.l`。
 
 用户定义的配置选项保存在`.config`中，如下所示:
 
@@ -362,9 +362,9 @@ CONFIG_HAS_DMA=y
 CONFIG_CHECK_SIGNATURE=y
 ```
 
-所有配置符号的前缀都是CONFIG_字符串。如果设置了相关配置项，则在其后附加= y或= n。未设置的选项使用\#号注释掉。
+所有配置符号的前缀都是`CONFIG_`字符串。如果设置了相关配置项，则在其后附加`=y`或`=n`。未设置的选项使用`#`号注释掉。
 
-为使内核源代码能够看到所选的配置，必须包含`<config.h>`文件。该文件又将`<autoconf.h>`包含到源代码中。后者包含了预处理器可以提取的配置信息，如下所示:
+为使**内核源代码**能够看到所选的配置，必须包含`<config.h>`文件。该文件又将`<autoconf.h>`包含到源代码中。后者包含了**预处理器可以提取的配置信息**，如下所示:
 
 ```
 <autoconf.h>
@@ -393,7 +393,7 @@ CONFIG_CHECK_SIGNATURE=y
 #define CONFIG_I2C_I801_MODULE 1
 ```
 
-配置符号的前缀仍然是`CONFIG_`。每个选中的选项都定义为1。模块选项同样定义为1，但预处理 器符号末尾附加了`_MODULE`字符串。未选择的配置项用undef明确地标记为未定义。数值和字符串都替换为用户选择的值。
+配置符号的前缀仍然是`CONFIG_`。每个**选中的选项**都定义为`1`。模块选项同样定义为1，但预处理器符号末尾附加了`_MODULE`字符串。未选择的配置项用undef明确地标记为未定义。数值和字符串都替换为用户选择的值。
 
 这使得可以向源代码中插入对配置信息的查询。例如:
 
