--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -1,4 +1,4 @@
-在配置内核之后，就必须编译源代码，来生成内核映像和模块二进制文件。内核使用GNU Make 来完成该工作。它采用了一个复杂的Makefile系统，来满足联编内核的特殊要求，联编普通应用程序 通常没有这些需求。要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深 入细节，只是从最终用户和内核程序员的角度(不是Kbuild开发者的角度)，来简单讲述一下联编系 统的使用。Documentation/kbuild/makefiles.txt中包含了联编系统的详细文档，本节就是基于该文档。
+在配置内核之后，就必须**编译源代码**，来生成**内核映像**和**模块二进制文件**。内核使用GNU Make 来完成该工作。它采用了一个复杂的Makefile系统，来满足联编内核的特殊要求，联编普通应用程序 通常没有这些需求。要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深 入细节，只是从最终用户和内核程序员的角度(不是Kbuild开发者的角度)，来简单讲述一下联编系 统的使用。Documentation/kbuild/makefiles.txt中包含了联编系统的详细文档，本节就是基于该文档。
 
 # 使用Kbuild系统
 
