--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -1,8 +1,12 @@
-在配置内核之后，就必须**编译源代码**，来生成**内核映像**和**模块二进制文件**。内核使用GNU Make 来完成该工作。它采用了一个复杂的Makefile系统，来满足联编内核的特殊要求，联编普通应用程序 通常没有这些需求。要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深 入细节，只是从最终用户和内核程序员的角度(不是Kbuild开发者的角度)，来简单讲述一下联编系 统的使用。Documentation/kbuild/makefiles.txt中包含了联编系统的详细文档，本节就是基于该文档。
+在配置内核之后，就必须**编译源代码**，来生成**内核映像**和**模块二进制文件**。内核使用`GNU Make`来完成该工作。
+
+它采用了一个复杂的**Makefile系统**，来满足**联编内核**的特殊要求，联编普通应用程序通常没有这些需求。要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深入细节，只是从最终用户和内核程序员的角度(不是Kbuild开发者的角度)，来简单讲述一下联编系统的使用。`Documentation/kbuild/makefiles.txt`中包含了联编系统的详细文档，本节就是基于该文档。
 
 # 使用Kbuild系统
 
-联编目标help在内核版本2.5开发期间被引入，用于向用户显示所有可用的make目标。它输出一个目标列表，会区分体系结构相关和无关的目标。例如，在UltraSparc系统上，会显示如下列表:
+`联编目标help`在内核版本2.5开发期间被引入，用于向用户显示所有可用的make目标。它输出一个**目标列表**，会区分体系结构相关和无关的目标。
+
+例如，在UltraSparc系统上，会显示如下列表:
 
 ```
 wolfgang@ultrameitner> make help
@@ -79,7 +83,7 @@ Execute "make" or "make all" to build all targets marked with [*]
 For further info see the ./README file
 ```
 
-IA\-32和AMD64系统所提供的体系结构相关目标是不同的。
+`IA-32`和`AMD64`系统所提供的体系结构**相关目标是不同的**。
 
 ```
 wolfgang@meitner> make help
@@ -100,19 +104,19 @@ Architecture specific targets (x86):
 
 # Makefile的结构
 
-除了`.config`文件，Kbuild机制还使用了下列组件。
+除了`.config`文件，**Kbuild机制**还使用了下列组件。
 
-- 主Makefile(/path/to/src/Makefile)，通过根据配置递归地编译子目录，并将编译结果合并到最终产品中，来生成内核本身和模块。
-- 体系结构相关的Makefile，在arch/arch/Makefile中，负责在编译期间必须遵守的与处理器相关的微妙之处，如特别的编译优化选项。该文件还实现了所有体系结构相关的make目标，此前在讨论help时提到过这些目标。
-- scripts/Makefile.*包含了与一般编译、模块生成、各种实用程序的编译、从内核树删除目标文件和临时文件等任务相关的make规则。
-- 内核源代码的各个子目录都包含了与特定驱动程序或子系统相关的Makefile(也采用了标准的语法)。
+- **主Makefile**(`/path/to/src/Makefile`)，通过根据配置**递归地编译子目录**，并将编译结果合并到最终产品中，来生成**内核本身**和**模块**。
+- **体系结构相关的Makefile**，在`arch/arch/Makefile`中，负责在编译期间必须遵守的**与处理器相关**的微妙之处，如特别的编译优化选项。该文件还实现了所有**体系结构相关的make目标**，此前在讨论help时提到过这些目标。
+- `scripts/Makefile.*`包含了与**一般编译、模块生成、各种实用程序的编译、从内核树删除目标文件和临时文件等任务相关的make规则**。
+- 内核源代码的**各个子目录**都包含了与特定驱动程序或子系统相关的**Makefile**(也采用了标准的语法)。
 
 ## 主Makefile
 
-主Makefile是内核编译的关键。它定义了C编译器、链接器的调用路径等信息。必须区分下列两种备选的工具链。
+主Makefile是**内核编译的关键**。它定义了**C编译器**、**链接器**的**调用路径**等信息。必须区分下列两种备选的工具链。
 
-- 用于生成在编译内核的主机上执行的本地程序的工具链。此类程序的例子如menuconfig的二进制文件或用于分析模块符号的工具。
-- 用于生成内核本身的工具链。
+- 用于生成在编译内核的主机上执行的**本地程序的工具链**。此类程序的例子如menuconfig的二进制文件或用于分析模块符号的工具。
+- 用于**生成内核本身的工具链**。
 
 这两个工具链通常是相同的。仅当交叉编译内核时，才有区别。换言之，在使用某种特定体系结 构的机器来编译另一种不同体系结构的内核时。如果目标计算机是资源较少的嵌入式系统(例如，基于ARM或MIPS的手持设备)或非常陈旧而速度缓慢的计算机(经典的Sparc或者m68 Mac)，那么会使用这种方法。在这种情况下，负责生成内核的工具链必须提供交叉编译器(和适当的交叉二进制文 件工具)，以便生成所需的代码。
 
