--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -113,12 +113,14 @@ Architecture specific targets (x86):
 
 ## 主Makefile
 
-主Makefile是**内核编译的关键**。它定义了**C编译器**、**链接器**的**调用路径**等信息。必须区分下列两种备选的工具链。
+主Makefile是**内核编译的关键**。它定义了**C编译器**、**链接器**的**调用路径**等信息。
 
-- 用于生成在编译内核的主机上执行的**本地程序的工具链**。此类程序的例子如menuconfig的二进制文件或用于分析模块符号的工具。
+必须区分下列两种备选的工具链。
+
+- 用于生成在编译内核的主机上执行的**本地程序的工具链**。此类程序的例子如`menuconfig`的二进制文件或用于分析模块符号的工具。
 - 用于**生成内核本身的工具链**。
 
-这两个工具链通常是相同的。仅当交叉编译内核时，才有区别。换言之，在使用某种特定体系结 构的机器来编译另一种不同体系结构的内核时。如果目标计算机是资源较少的嵌入式系统(例如，基于ARM或MIPS的手持设备)或非常陈旧而速度缓慢的计算机(经典的Sparc或者m68 Mac)，那么会使用这种方法。在这种情况下，负责生成内核的工具链必须提供交叉编译器(和适当的交叉二进制文 件工具)，以便生成所需的代码。
+这**两个工具链通常是相同**的。仅当**交叉编译内核**时，才有区别。换言之，在使用**某种特定体系结构的机器**来编译**另一种不同体系结构的内核**时。如果目标计算机是资源较少的嵌入式系统(例如，基于ARM或MIPS的手持设备)或非常陈旧而速度缓慢的计算机(经典的Sparc或者m68 Mac)，那么会使用这种方法。在这种情况下，**负责生成内核的工具链**必须提供**交叉编译器**(和适当的交叉二进制文件工具)，以便生成所需的代码。
 
 本地工具链定义如下:
 
@@ -132,7 +134,7 @@ HOSTCXXFLAGS     = -O2
 ...
 ```
 
-内核工具链定义如下:
+**内核工具链**定义如下:
 
 ```
 wolfgang@meitner> cat Makefile
@@ -165,11 +167,13 @@ AFLAGS_KERNEL   =
 ...
 ```
 
-定义之前的CROSS_COMPILE前缀通常为空白。如果在为不同体系结构编译内核，那么必须为其指定一个适当的值(例如，ia64-linux-)。 因而，对宿主机和目标会使用两个不同的工具链。
+定义之前的`CROSS_COMPILE`前缀通常为空白。如果在为**不同体系结构编译内核**，那么必须为其指定一个适当的值(例如，ia64-linux-)。 因而，对**宿主机**和**目标**会使用**两个不同的工具链**。
 
-注: 这可以在Makefile中显式设置，或通过环境中的shell变量指定，或作为参数传递给make。
+注: 这可以在Makefile中**显式设置**，或通过**环境中的shell变量指定**，或作为**参数传递给make**。
 
-所有其他Makefile都决不会直接使用工具的名称，而总是使用这里定义的变量。 主Makefile声明了ARCH变量，表示编译的内核所针对的体系结构。它包含了一个自动检测的值，需要与arch/下的某个目录名兼容。例如，对IA-32，ARCH设置为i386，因为对应的体系结构相关文 件存在于arch/i386/中。
+所有**其他Makefile**都决**不会直接使用工具的名称**，而总是使用这里定义的**变量**。
+
+**主Makefile**声明了**ARCH变量**，表示编译的内核所针对的体系结构。它包含了一个自动检测的值，需要与`arch/`下的**某个目录名兼容**。例如，对`IA-32`，ARCH设置为i386，因为对应的体系结构相关文 件存在于arch/i386/中。
 
 如果是在交叉编译内核，就必须据此修改ARCH。例如，为ARM系统配置和编译内核时，需要下 列调用(假定已经有适当的工具链可用):
 
