--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -173,16 +173,26 @@ AFLAGS_KERNEL   =
 
 所有**其他Makefile**都决**不会直接使用工具的名称**，而总是使用这里定义的**变量**。
 
-**主Makefile**声明了**ARCH变量**，表示编译的内核所针对的体系结构。它包含了一个自动检测的值，需要与`arch/`下的**某个目录名兼容**。例如，对`IA-32`，ARCH设置为i386，因为对应的体系结构相关文 件存在于arch/i386/中。
+**主Makefile**声明了**ARCH变量**，表示编译的内核所针对的体系结构。它包含了一个自动检测的值，需要与`arch/`下的**某个目录名兼容**。例如，对`IA-32`，**ARCH**设置为`i386`，因为对应的体系结构相关文件存在于arch/i386/中。
 
-如果是在交叉编译内核，就必须据此修改ARCH。例如，为ARM系统配置和编译内核时，需要下 列调用(假定已经有适当的工具链可用):
+如果是在**交叉编译内核**，就必须据此**修改ARCH**。例如，为ARM系统配置和编译内核时，需要下列调用(假定已经有适当的工具链可用):
 
 ```
 make ARCH=arm menuconfig
 make ARCH=arm CROSS_COMPILE=arm-linux-
 ```
 
-除了这些定义之外，Makefile还包括了其他一些语句，用于递归下降到各个子目录，并借助子目 录局部的Makefile来编译其中包含的文件。本附录不会详细讨论该机制，因为它涉及make机制的很多微妙之处。
+除了这些定义之外，Makefile还包括了**其他一些语句**，用于**递归下降到各个子目录**，并借助子目录局部的Makefile来编译其中包含的文件。本附录不会详细讨论该机制，因为它涉及make机制的很多微妙之处。
 
 # 驱动程序和子系统Makefile
+
+驱动程序和子系统目录中的Makefile用于根据`.config`中的**配置**来**编译正确的文件**，并将**编译的流程导向到所要求的子目录**中。
+
+Kbuild框架使得创建这样的Makefile相对比较容易。只需要下列一行代码，即可创建一个持久编译到内核中的目标文件（无论配置如何）：
+
+```
+obj-y = file.o
+```
+
+根据文件名，Kbuild自动地检测到源文件为file.c。如果对应的二进制目标文件不存在或源文件在目标文件的上一版本生成后已经修改，则用适当的选项调用C编译器来生成二进制目标文件。在通过链接器链接内核时，生成的文件会自动包含进来。
 
