--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -188,11 +188,42 @@ make ARCH=arm CROSS_COMPILE=arm-linux-
 
 驱动程序和子系统目录中的Makefile用于根据`.config`中的**配置**来**编译正确的文件**，并将**编译的流程导向到所要求的子目录**中。
 
-Kbuild框架使得创建这样的Makefile相对比较容易。只需要下列一行代码，即可创建一个持久编译到内核中的目标文件（无论配置如何）：
+Kbuild框架使得创建这样的Makefile相对**比较容易**。只需要下列一行代码，即可创建一个持久编译到内核中的**目标文件**（无论配置如何）：
 
 ```
 obj-y = file.o
 ```
 
-根据文件名，Kbuild自动地检测到源文件为file.c。如果对应的二进制目标文件不存在或源文件在目标文件的上一版本生成后已经修改，则用适当的选项调用C编译器来生成二进制目标文件。在通过链接器链接内核时，生成的文件会自动包含进来。
+根据**文件名**，**Kbuild**自动地检测到**源文件为file.c**。如果对应的二进制目标文件不存在或源文件在目标文件的上一版本生成后已经修改，则用适当的选项调用C编译器来生成二进制目标文件。在通过链接器链接内核时，生成的文件会自动包含进来。
 
+如果有**几个目标文件**，也可以采用这种方法。所指定的文件必须用**空格分隔**。
+
+如果有是否链接内核组件的选择（换言之，即配置是通过一个**bool查询控制的**），Makefile必须根据用户的选择作出反应。为此可使用Makefile中的配置符号，如下例所示（取自kernel/目录中的Makefile）：
+
+```makefile
+obj-y = sched.o fork.o exec_domain.o panic.o printk.o profile.o \
+        exit.o itimer.o time.o softirq.o resource.o \
+        sysctl.o capability.o ptrace.o timer.o user.o user_namespace.o \
+        signal.o sys.o kmod.o workqueue.o pid.o \
+        rcupdate.o extable.o params.o posix-timers.o \
+        kthread.o wait.o kfifo.o sys_ni.o posix-cpu-timers.o mutex.o \
+        hrtimer.o rwsem.o latency.o nsproxy.o srcu.o \
+        utsname.o notifier.o
+
+obj-$(CONFIG_SYSCTL) += sysctl_check.o
+obj-$(CONFIG_STACKTRACE) += stacktrace.o
+obj-y += time/
+...
+obj-$(CONFIG_GENERIC_ISA_DMA) += dma.o
+obj-$(CONFIG_SMP) += cpu.o spinlock.o
+obj-$(CONFIG_DEBUG_SPINLOCK) += spinlock.o
+...
+obj-$(CONFIG_MODULES) += module.o
+obj-$(CONFIG_KALLSYMS) += kallsyms.o
+obj-$(CONFIG_PM) += power/
+...
+obj-$(CONFIG_SYSCTL) += utsname_sysctl.o
+obj-$(CONFIG_TASK_DELAY_ACCT) += delayacct.o
+obj-$(CONFIG_TASKSTATS) += taskstats.o tsacct.o
+obj-$(CONFIG_MARKERS) += marker.o
+```
