--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -227,3 +227,34 @@ obj-$(CONFIG_TASK_DELAY_ACCT) += delayacct.o
 obj-$(CONFIG_TASKSTATS) += taskstats.o tsacct.o
 obj-$(CONFIG_MARKERS) += marker.o
 ```
+
+列表上部的文件**总是会编译到内核**中。接下来的文件，除非对应的配置符号设置为y，否则Kbuild不会编译它们。例如，如果配置了模块支持，对应的一行将扩展为下列语句：
+
+```
+obj-y += module.o
+```
+
+请注意，这里使用了`+=`而不是普通的赋值符号（=），这表示将该目标文件加入到`obj-y`目标中。
+
+如果**未配置模块支持**，这一行将扩展为下列语句：
+
+```
+obj-n += module.o
+```
+
+Kbuild系统会**忽略**目标`obj-n`中的所有文件，不会进行编译。
+
+下面的一行代码用于电源管理的，特别有趣：
+
+```
+obj-$(CONFIG_PM) += power/ 
+```
+
+这里加入的不是文件，而是目录。如果设置了CONFIG_PM，Kbuild在编译期间就将切换到kernel/power/目录，并处理其中包含的Makefile。
+Kbuild会将同一目录下包含在obj-y目标中的所有目标文件都链接到一个目标文件built-in.o中，随后将该目标文件再链接到整个内核中。5
+5 如果目标文件使用了初始调用（在附录D讨论），obj-y中指定文件的次序，就是同一类别的初始调用被调用的次序，因为链接的次序与obj-y中的文件次序是相同的。
+模块可以无缝融合到该机制中，如以下Ext3的Makefile所示：
+#
+# Makefile for the linux […]”
+
+Excerpt From: 莫尔勒(Wolfgang Mauerer). “深入Linux内核架构 (图灵程序设计丛书·Linux/UNIX系列).” Apple Books. 
