--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -250,11 +250,43 @@ Kbuild系统会**忽略**目标`obj-n`中的所有文件，不会进行编译。
 obj-$(CONFIG_PM) += power/ 
 ```
 
-这里加入的不是文件，而是目录。如果设置了CONFIG_PM，Kbuild在编译期间就将切换到kernel/power/目录，并处理其中包含的Makefile。
-Kbuild会将同一目录下包含在obj-y目标中的所有目标文件都链接到一个目标文件built-in.o中，随后将该目标文件再链接到整个内核中。5
-5 如果目标文件使用了初始调用（在附录D讨论），obj-y中指定文件的次序，就是同一类别的初始调用被调用的次序，因为链接的次序与obj-y中的文件次序是相同的。
-模块可以无缝融合到该机制中，如以下Ext3的Makefile所示：
-#
-# Makefile for the linux […]”
+这里加入的**不是文件**，而是**目录**。如果设置了`CONFIG_PM`，**Kbuild**在**编译期间**就将**切换**到`kernel/power/`目录，并处理其中包含的**Makefile**。
 
-Excerpt From: 莫尔勒(Wolfgang Mauerer). “深入Linux内核架构 (图灵程序设计丛书·Linux/UNIX系列).” Apple Books. 
+Kbuild会将**同一目录**下包含在`obj-y`目标中的**所有目标文件**都链接到**一个目标文件**`built-in.o`中，随后将**该目标文件**再链接到**整个内核**中。
+
+注: 如果目标文件使用了初始调用（在附录D讨论），obj-y中指定文件的次序，就是同一类别的初始调用被调用的次序，因为链接的次序与obj-y中的文件次序是相同的。
+
+模块可以无缝融合到该机制中，如以下Ext3的Makefile所示：
+
+```
+#
+# Makefile for the linux […]
+#
+
+obj-$(CONFIG_EXT3_FS) += ext3.o
+
+ext3-y := balloc.o bitmap.o dir.o file.o fsync.o ialloc.o inode.o \ ioctl.o namei.o super.o symlink.o hash.o resize.o ext3_jbd.o
+
+ext3-$(CONFIG_EXT3_FS_XATTR) += xattr.o xattr_user.o xattr_trusted.o ext3-$(CONFIG_EXT3_FS_POSIX_ACL) += acl.o
+ext3-$(CONFIG_EXT3_FS_SECURITY) += xattr_security.o
+```
+
+如果Ext3文件系统**编译为一个模块**，`CONFIG_EXT3_FS`将扩展为m，标准目标`obj-m`规定必须生成一个ext3.o文件。该目标文件的内容由另一个目标`ext3-y`定义。
+
+内核在obj-m中是以间接方式来指定源文件，并非直接指定，这使得可以将额外的特性(是否启 用)考虑进来。Kconfig机制中对应的配置符号通过一个bool选择描述，而对主要的符号 CONFIG_EXT3_FS使用了tristate类型。
+
+例如，如果使用了扩展属性，则CONFIG_EXT3_FS_XATTR符号扩展为y，在Makefile中将产生下列 语句:
+
+```
+ext3-y += xattr.o xattr_user.o xattr_trusted.o
+```
+
+这将该特性额外需要的目标文件链接进来，也说明了为什么要使用间接的make目标ext3-y。如 果使用下列语句，那么将会有两个目标(obj-y和obj-m):
+
+```
+obj-$(CONFIG_EXT3_FS)} += xattr.o xattr_user.o xattr_trusted.o
+```
+
+因而，其他文件将无法包含到标准的ext3.o中。
+
+当然，在Ext3持久编译到内核中时，间接方法仍然会发挥作用。
