--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -273,15 +273,15 @@ ext3-$(CONFIG_EXT3_FS_SECURITY) += xattr_security.o
 
 如果Ext3文件系统**编译为一个模块**，`CONFIG_EXT3_FS`将扩展为m，标准目标`obj-m`规定必须生成一个ext3.o文件。该目标文件的内容由另一个目标`ext3-y`定义。
 
-内核在obj-m中是以间接方式来指定源文件，并非直接指定，这使得可以将额外的特性(是否启 用)考虑进来。Kconfig机制中对应的配置符号通过一个bool选择描述，而对主要的符号 CONFIG_EXT3_FS使用了tristate类型。
+内核在`obj-m`中是以**间接方式**来指定源文件，并非直接指定，这使得可以将额外的特性(是否启用)考虑进来。Kconfig机制中对应的配置符号通过一个bool选择描述，而对主要的符号 `CONFIG_EXT3_FS`使用了tristate类型。
 
-例如，如果使用了扩展属性，则CONFIG_EXT3_FS_XATTR符号扩展为y，在Makefile中将产生下列 语句:
+例如，如果使用了**扩展属性**，则`CONFIG_EXT3_FS_XATTR`符号扩展为y，在Makefile中将产生下列 语句:
 
 ```
 ext3-y += xattr.o xattr_user.o xattr_trusted.o
 ```
 
-这将该特性额外需要的目标文件链接进来，也说明了为什么要使用间接的make目标ext3-y。如 果使用下列语句，那么将会有两个目标(obj-y和obj-m):
+这将该特性额外需要的目标文件链接进来，也说明了为什么要使用间接的make目标ext3-y。如果使用下列语句，那么将会有两个目标(`obj-y`和`obj-m`):
 
 ```
 obj-$(CONFIG_EXT3_FS)} += xattr.o xattr_user.o xattr_trusted.o
